This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Improper use of SystemError in the mmap module
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-06-04 04:40 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 7381 merged ZackerySpytz, 2018-06-04 04:44
PR 7426 merged miss-islington, 2018-06-05 13:00
PR 7427 merged miss-islington, 2018-06-05 13:02
PR 7432 merged serhiy.storchaka, 2018-06-05 13:24
Messages (7)
msg318623 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-06-04 04:40
Both mmap_concat() and mmap_repeat() raise a SystemError when invoked.
msg318630 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-06-04 04:59
Thank you for your PR Zackery!

I concur that an alternative would be to remove mmap_concat() and mmap_repeat(). Why not use this simpler way? Are there any drawbacks?
msg318635 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-06-04 05:47
It doesn't look like it. I've updated the PR.
msg318749 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-06-05 12:59
New changeset e9e397605789b2a67b67558fbbe756b7b88934f5 by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-33767: Fix improper use of SystemError by mmap.mmap objects (GH-7381)
https://github.com/python/cpython/commit/e9e397605789b2a67b67558fbbe756b7b88934f5
msg318753 - (view) Author: miss-islington (miss-islington) Date: 2018-06-05 13:21
New changeset 631fe1fa423c42197d533103dcf349ca19baed0c by Miss Islington (bot) in branch '3.7':
bpo-33767: Fix improper use of SystemError by mmap.mmap objects (GH-7381)
https://github.com/python/cpython/commit/631fe1fa423c42197d533103dcf349ca19baed0c
msg318754 - (view) Author: miss-islington (miss-islington) Date: 2018-06-05 13:25
New changeset ae55d29fe04ee1aeb1bcb2e9b84e5bc9d4ecb070 by Miss Islington (bot) in branch '3.6':
bpo-33767: Fix improper use of SystemError by mmap.mmap objects (GH-7381)
https://github.com/python/cpython/commit/ae55d29fe04ee1aeb1bcb2e9b84e5bc9d4ecb070
msg318767 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-06-05 16:51
New changeset 3014d6eb7f6ed8cc61b9b26fe1c4454760dc8621 by Serhiy Storchaka in branch '2.7':
[2.7] bpo-33767: Fix improper use of SystemError by mmap.mmap objects (GH-7381) (GH-7432)
https://github.com/python/cpython/commit/3014d6eb7f6ed8cc61b9b26fe1c4454760dc8621
History
Date User Action Args
2022-04-11 14:59:01adminsetgithub: 77948
2018-06-05 16:52:00serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-06-05 16:51:46serhiy.storchakasetmessages: + msg318767
2018-06-05 13:25:24miss-islingtonsetmessages: + msg318754
2018-06-05 13:24:54serhiy.storchakasetpull_requests: + pull_request7058
2018-06-05 13:21:07miss-islingtonsetnosy: + miss-islington
messages: + msg318753
2018-06-05 13:02:51miss-islingtonsetpull_requests: + pull_request7053
2018-06-05 13:00:53miss-islingtonsetpull_requests: + pull_request7052
2018-06-05 12:59:47serhiy.storchakasetmessages: + msg318749
2018-06-04 05:47:22ZackerySpytzsetmessages: + msg318635
2018-06-04 04:59:09serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg318630
2018-06-04 04:44:04ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request7008
2018-06-04 04:40:18ZackerySpytzcreate