bpo-33767: Fix improper use of SystemError by mmap.mmap objects